--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -211,7 +211,7 @@ body:not(.events-archive) .tribe-events-list .hentry.vevent {
         margin: 0 2rem 0 0rem;
     }
     .event-body.thumbtrue {
-        margin: 0 ;
+        margin: 0;
     }
     margin: 1rem;
     .flex-control-nav {
@@ -223,6 +223,7 @@ body:not(.events-archive) .tribe-events-list .hentry.vevent {
             margin: 0 2rem 0 165px;
         }
     }
+
     @include respond-to("medium wide content") {
         .event-body.thumbtrue {
             margin: 0 2rem 0 165px;
@@ -403,6 +404,18 @@ article.tribe_events h3 {
         .wg_url {
             @extend %medium-type;
             padding: 3rem 0 1rem 0;
+        }
+    }
+    .type-working-group header {
+        h1 {
+            .info {
+                text-transform: uppercase;
+                display: inline;
+                font-size: 1.6rem;
+            }
+            a:hover {
+                text-decoration: underline;
+            }
         }
     }
 }
