--- a/sass/partials/_reset.scss
+++ b/sass/partials/_reset.scss
@@ -36,6 +36,7 @@ figure,
 footer,
 header,
 nav,
+main,
 section {
 	display: block;
 }
